ros2_ws/log/build_2023-03-05_13-45-48/merge_arrays/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ros/ros2_ws/install/merge_arrays/lib/python3.10/site-packages/merge_arrays/merge_arrays_node.py", line 34
    msg.data = [1 3 5 6]
                ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

